--- a/po/cy.po
+++ b/po/cy.po
@@ -512,7 +512,7 @@ msgstr ""
 #: libraries/mult_submits.inc.php:116 libraries/tbl_links.inc.php:50
 #: tbl_structure.php:37 tbl_structure.php:49 tbl_structure.php:467
 msgid "Browse"
-msgstr ""
+msgstr "Porwch"
 
 #: db_search.php:272 libraries/display_tbl.lib.php:1165
 #: libraries/display_tbl.lib.php:2056 libraries/sql_query_form.lib.php:470
@@ -520,7 +520,7 @@ msgstr ""
 #: pmd_general.php:377 setup/frames/index.inc.php:125
 #: setup/frames/index.inc.php:216 tbl_row_action.php:63
 msgid "Delete"
-msgstr ""
+msgstr "Dileu"
 
 #: db_search.php:285
 #, possible-php-format
@@ -529,7 +529,7 @@ msgstr ""
 
 #: db_search.php:299
 msgid "Search in database"
-msgstr ""
+msgstr "Chwiliwch yn y gronfa ddata"
 
 #: db_search.php:302
 msgid "Word(s) or value(s) to search for (wildcard: \"%\"):"
@@ -537,7 +537,7 @@ msgstr ""
 
 #: db_search.php:307
 msgid "Find:"
-msgstr ""
+msgstr "Darganfyddwch:"
 
 #: db_search.php:311 db_search.php:312
 msgid "Words are separated by a space character (\" \")."
@@ -545,18 +545,18 @@ msgstr ""
 
 #: db_search.php:325
 msgid "Inside table(s):"
-msgstr ""
+msgstr "Tu fewn tabl(au):"
 
 #: db_search.php:355
 msgid "Inside column:"
-msgstr ""
+msgstr "Tu fewn colofn:"
 
 #: db_structure.php:81 db_structure.php:82 db_structure.php:94
 #: db_structure.php:95 db_structure.php:107 db_structure.php:108
 #: libraries/common.lib.php:2823 libraries/sql_query_form.lib.php:334
 #: libraries/sql_query_form.lib.php:337 libraries/tbl_links.inc.php:76
 msgid "Insert"
-msgstr ""
+msgstr "Mewnosod"
 
 #: db_structure.php:83 db_structure.php:96 db_structure.php:109
 #: libraries/common.lib.php:2820 libraries/common.lib.php:2827
@@ -567,7 +567,7 @@ msgstr ""
 #: libraries/tbl_links.inc.php:56 pmd_general.php:134
 #: server_privileges.php:554 server_replication.php:315 tbl_tracking.php:269
 msgid "Structure"
-msgstr ""
+msgstr "Strwythur"
 
 #: db_structure.php:84 db_structure.php:85 db_structure.php:97
 #: db_structure.php:98 db_structure.php:110 db_structure.php:111
@@ -578,37 +578,37 @@ msgstr ""
 #: server_databases.php:352 tbl_structure.php:27 tbl_structure.php:151
 #: tbl_structure.php:152 tbl_structure.php:471
 msgid "Drop"
-msgstr ""
+msgstr "Gollwng"
 
 #: db_structure.php:86 db_structure.php:87 db_structure.php:99
 #: db_structure.php:100 db_structure.php:112 db_structure.php:113
 #: db_structure.php:543 db_structure.php:544 libraries/common.lib.php:1653
 #: libraries/mult_submits.inc.php:39 libraries/tbl_links.inc.php:105
 msgid "Empty"
-msgstr ""
+msgstr "Gwagu"
 
 #: db_structure.php:316 libraries/tbl_links.inc.php:100
 #, possible-php-format
 msgid "Table %s has been emptied"
-msgstr ""
+msgstr "Cafodd tabl %s ei wagu"
 
 #: db_structure.php:326 libraries/tbl_links.inc.php:133
 #, possible-php-format
 msgid "View %s has been dropped"
-msgstr ""
+msgstr "Cafodd golwg %s ei ollwng"
 
 #: db_structure.php:326 libraries/tbl_links.inc.php:133
 #, possible-php-format
 msgid "Table %s has been dropped"
-msgstr ""
+msgstr "Cafodd tabl %s ei ollwng"
 
 #: db_structure.php:333
 msgid "Tracking is active."
-msgstr ""
+msgstr "Mae tracio'n weithredol"
 
 #: db_structure.php:335
 msgid "Tracking is not active."
-msgstr ""
+msgstr "Nid yw tracio'n weithredol"
 
 #: db_structure.php:420 libraries/display_tbl.lib.php:1944
 #, possible-php-format
@@ -620,17 +620,17 @@ msgstr ""
 #: db_structure.php:434 db_structure.php:448 libraries/header.inc.php:126
 #: libraries/tbl_info.inc.php:66 tbl_structure.php:185 test/theme.php:74
 msgid "View"
-msgstr ""
+msgstr "Dangos"
 
 #: db_structure.php:485 libraries/db_structure.lib.php:49
 #: libraries/server_links.inc.php:70 server_replication.php:33
 #: server_replication.php:164 server_status.php:258
 msgid "Replication"
-msgstr ""
+msgstr "Dyblygiad"
 
 #: db_structure.php:489
 msgid "Sum"
-msgstr ""
+msgstr "Swm"
 
 #: db_structure.php:496 libraries/StorageEngine.class.php:356
 #, possible-php-format
@@ -649,43 +649,43 @@ msgstr ""
 #: server_databases.php:348 server_privileges.php:530
 #: server_privileges.php:1560 tbl_structure.php:458
 msgid "Check All"
-msgstr ""
+msgstr "Dewis Pob"
 
 #: db_structure.php:531 libraries/display_tbl.lib.php:2077
 #: libraries/replication_gui.lib.php:33 server_databases.php:350
 #: server_privileges.php:533 server_privileges.php:1564 tbl_structure.php:462
 msgid "Uncheck All"
-msgstr ""
+msgstr "Dad-ddewis Pob"
 
 #: db_structure.php:536
 msgid "Check tables having overhead"
-msgstr ""
+msgstr "Gwiriwch dablau â gorbenion"
 
 #: db_structure.php:547 db_structure.php:548 db_structure.php:599
 #: libraries/display_tbl.lib.php:2180 libraries/mult_submits.inc.php:28
 #: tbl_structure.php:492 tbl_structure.php:494
 msgid "Print view"
-msgstr ""
+msgstr "Argraffu golwg"
 
 #: db_structure.php:549 db_structure.php:550 libraries/mult_submits.inc.php:42
 #: tbl_operations.php:581
 msgid "Check table"
-msgstr ""
+msgstr "Gwirio tabl"
 
 #: db_structure.php:551 db_structure.php:552 libraries/mult_submits.inc.php:47
 #: tbl_operations.php:621 tbl_structure.php:709 tbl_structure.php:711
 msgid "Optimize table"
-msgstr ""
+msgstr "Optimeiddio tabl"
 
 #: db_structure.php:553 db_structure.php:554 libraries/mult_submits.inc.php:52
 #: tbl_operations.php:611
 msgid "Repair table"
-msgstr ""
+msgstr "Trwsio tabl"
 
 #: db_structure.php:555 db_structure.php:556 libraries/mult_submits.inc.php:57
 #: tbl_operations.php:601
 msgid "Analyze table"
-msgstr ""
+msgstr "Dadansoddi tabl"
 
 #: db_structure.php:557 db_structure.php:558 libraries/db_links.inc.php:71
 #: libraries/display_export.lib.php:83 libraries/display_tbl.lib.php:2094
@@ -694,15 +694,15 @@ msgstr ""
 #: pmd_pdf.php:84 pmd_pdf.php:109 server_privileges.php:1341
 #: setup/frames/menu.inc.php:22 tbl_row_action.php:59
 msgid "Export"
-msgstr ""
+msgstr "Allforio"
 
 #: db_structure.php:606 libraries/display_pdf_schema.lib.php:44
 msgid "Data Dictionary"
-msgstr ""
+msgstr "Geiriadur Data"
 
 #: db_tracking.php:66
 msgid "Tracked tables"
-msgstr ""
+msgstr "Tablau a draciwyd"
 
 #: db_tracking.php:71 libraries/export/htmlword.php:86
 #: libraries/export/latex.php:148 libraries/export/odt.php:113
@@ -714,65 +714,65 @@ msgstr ""
 #: server_synchronize.php:1179 server_synchronize.php:1183
 #: tbl_tracking.php:591 test/theme.php:65
 msgid "Database"
-msgstr ""
+msgstr "Cronfa ddata"
 
 #: db_tracking.php:73
 msgid "Last version"
-msgstr ""
+msgstr "Fersiwn diweddaraf"
 
 #: db_tracking.php:74 tbl_tracking.php:594
 msgid "Created"
-msgstr ""
+msgstr "Crëwyd"
 
 #: db_tracking.php:75 tbl_tracking.php:595
 msgid "Updated"
-msgstr ""
+msgstr "Diweddarwyd"
 
 #: db_tracking.php:77 libraries/Index.class.php:440
 #: libraries/db_structure.lib.php:53 server_databases.php:203
 #: server_privileges.php:1503 server_privileges.php:1686
 #: server_privileges.php:2034 tbl_structure.php:187
 msgid "Action"
-msgstr ""
+msgstr "Gweithred"
 
 #: db_tracking.php:88 db_tracking.php:120
 msgid "Delete tracking data for this table"
-msgstr ""
+msgstr "Dilëwch data tracio ar gyfer y tabl hwn"
 
 #: db_tracking.php:106 tbl_tracking.php:548 tbl_tracking.php:606
 #: tbl_tracking.php:613
 msgid "active"
-msgstr ""
+msgstr "gweithredol"
 
 #: db_tracking.php:108 tbl_tracking.php:550 tbl_tracking.php:608
 #: tbl_tracking.php:610
 msgid "not active"
-msgstr ""
+msgstr "ddim yn weithredol"
 
 #: db_tracking.php:121
 msgid "Versions"
-msgstr ""
+msgstr "Fersiynau"
 
 #: db_tracking.php:122 tbl_tracking.php:379 tbl_tracking.php:624
 msgid "Tracking report"
-msgstr ""
+msgstr "Adroddiad tracio"
 
 #: db_tracking.php:123 tbl_tracking.php:251 tbl_tracking.php:624
 msgid "Structure snapshot"
-msgstr ""
+msgstr "Ciplun strwythur"
 
 #: db_tracking.php:152
 msgid "Untracked tables"
-msgstr ""
+msgstr "Tablau heb dracio "
 
 #: db_tracking.php:172 db_tracking.php:174 tbl_structure.php:528
 #: tbl_structure.php:530
 msgid "Track table"
-msgstr ""
+msgstr "Tracio tabl"
 
 #: db_tracking.php:200
 msgid "Database Log"
-msgstr ""
+msgstr "Log cronfa ddata"
 
 #: export.php:62
 msgid "Selected export type has to be saved in file!"
