--- a/po/cs.po
+++ b/po/cs.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-07 22:09+0200\n"
-"PO-Revision-Date: 2010-06-01 08:05+0200\n"
+"PO-Revision-Date: 2010-06-07 22:13+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
 "Language: cs\n"
@@ -8121,10 +8121,9 @@ msgid "Propose table structure"
 msgstr "Navrhnout strukturu tabulky"
 
 #: tbl_structure.php:540
-#, fuzzy
 #| msgid "Add column(s)"
 msgid "Add column"
-msgstr "Přidat pole"
+msgstr "Přidat sloupec"
 
 #: tbl_structure.php:554
 msgid "At End of Table"
